# taxi-prediction-fullstack-orhan

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/a3_packaging/: __init__.py
src/taxi_prediction_fullstack_orhan/model_development/: 01_eda.ipynb
src/taxipred/: __init__.py
src/taxipred/backend/: __init__.py  api.py  data_processing.py
src/taxipred/frontend/: __init__.py  app.py
src/taxipred/model_development/: 01_eda.ipynb  linear_regression_model.pkl
